--- a/pkgs/xmas_snow/snowstyle.css
+++ b/pkgs/xmas_snow/snowstyle.css
@@ -1,3 +1,3 @@
-.snowContainer {display: inline; border: 1px solid #336699; padding: 10px; float: right; background-image: url("http://cdn.staticneo.com/nfassets/pkgs/xmas_snow/snowbg.png")}
+.snowContainer {display: inline; border: 1px solid #336699; padding: 10px; float: right; background-image: url("https://cdn.staticneo.com/nfassets/pkgs/xmas_snow/snowbg.png")}
 .snowContainer A {color: black; text-decoration: none}
-.xmasCursor { cursor : url("http://cdn.staticneo.com/nfassets/pkgs/xmas_snow/xmas.ani"), url("http://cdn.staticneo.com/nfassets/pkgs/xmas_snow/xmas.gif"), pointer }
+.xmasCursor { cursor : url("https://cdn.staticneo.com/nfassets/pkgs/xmas_snow/xmas.ani"), url("https://cdn.staticneo.com/nfassets/pkgs/xmas_snow/xmas.gif"), pointer }
